--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -15,7 +15,16 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v4  # Pulls the latest code
+        uses: actions/checkout@v4  # Pull the latest code
 
-      - name: List Files
-        run: ls -la  # Lists all files in the directory
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Build Docker Image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/sensy:latest .
+
+      - name: Push Docker Image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/sensy:latest
