--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -33,3 +33,26 @@ jobs:
 
       - name: Push Docker Image
         run: docker push bhupendrargoud/sensy:${{ env.SHORT_SHA }}
+  update-deployment:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Deployment Repo
+        run: git clone -b master git@github.com:bhupendrargoud/infra.git
+
+      - name: Set Python Environment
+        run: python -m pip install --upgrade pip pyyaml
+
+      - name: Update Image Tag in Deployment YAML
+        run: |
+          python update_image.py -v bhupendrargoud/sensy:${{ env.SHORT_SHA }} \
+          -r git@github.com:bhupendrargoud/infra.git
+
+      - name: Commit & Push Changes
+        run: |
+          cd infra
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add deployment.yaml
+          git commit -m "Update image tag to ${{ env.SHORT_SHA }}"
+          git push origin master
