--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -44,23 +44,22 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-          
+
       - name: Checkout Deployment Repo
-        run: git clone -b master git@github.com:bhupendrargoud/infra.git
+        run: |
+          git clone -b master git@github.com:bhupendrargoud/infra.git
+          pwd
+          ls -la
 
       - name: Set Python Environment
         run: python -m pip install --upgrade pip pyyaml
 
       - name: Update Image Tag in Deployment YAML
         run: |
+          cd infra
           python update_image.py -v bhupendrargoud/sensy:${{ env.SHORT_SHA }} \
           -r git@github.com:bhupendrargoud/infra.git
 
       - name: Commit & Push Changes
         run: |
-          cd infra
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add deployment.yaml
-          git commit -m "Update image tag to ${{ env.SHORT_SHA }}"
-          git push origin master
+          ls -la
