--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -49,10 +49,6 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
-      - name :  git config
-        run : |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
 
       - name: Checkout Deployment Repo
         run: |
@@ -71,4 +67,6 @@ jobs:
 
           git add deployment.yaml
           git commit -m "image tag : ${{ env.SHORT_SHA }}"
+          git config --global user.email "bhupendrargoud@gmail.com"
+          git config --global user.name "Bhupendra R"
           git push origin master
